2006-12-06  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c:
	    To polish a very fine point, SMTP reply for MAIL FROM
	    does not allow "450", but "451" is acceptable.

	* smtpserver/smtpserver.c:
	    Feed a NUL-byte on ARGV-overwrite simulation of  setproctitle()
	    in systems that have to do that..

	* smtpserver/subdaemon-rtr.c:
	    Pass  -Z zconf  -option for the called execl()s.

	* smtpserver/subdaemons.c:
	    Pass  -R  routerprog   option to called sub-instance
	    of the smtpserver.

2006-12-04  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/policytest.c, smtpserver/smtpauth.c,
	  smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/smtphook.c,   smtpserver/smtpdata.c:
	    Compiled and linked in support for Perl hooks crashes
	    in case the actual hook is not properly initialized.
	    Only if the init-call yields success, do enable hook
	    calling!

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/smtpcmds.c:
	    Analyze, verify and report (in "rcvdfrom" envelope
	    header ending up in syslog, and in message Received:
	    header) both remote host source IP reversing success,
	    that reversed name had also the remote IP address in
	    its set, that helo/ehlo-command input syntax is ok
	    (in strict sense!), and that given parameter yields
	    same IP address as remote host has.
	    This may end up in policy controls, or possibly not.

2006-12-03  Matti Aarnio  <mea@zmailer.org>

	* configure.in, Makefile.in:
	    More feeding of Daniel Kiper's bits.
	    SRS related configuration environment bits

	* smtpserver/policytest.c, smtpserver/policytest.h,
	  smtpserver/smtpauth.c, smtpserver/smtpdata.c,
	  smtpserver/smtphook.c, smtpserver/smtpserver.c,
	  smtpserver/smtpserver.h:
	    More feeding of Daniel Kiper's bits.
	    These rewrite (in a big way) the external perl hook
	    mechanism, and with supplied sample elsewere, can
	    be used to implement hookup to e.g. PostGrey server.
