@@ -1,3 +1,11 @@
+2006-12-07  Matti Aarnio  <mea@zmailer.org>
+
+	* utils/smtp-contentfilter.in:
+	    The perl prototype of content filter service didn't
+	    like at all when I force-fed it the '-Z zconf' parameter.
+	    Had to alter  "while (<>) .." to "while (<STDIN>) .."
+	    construction.
+
 2006-12-06  Matti Aarnio  <mea@zmailer.org>
 
 	* smtpserver/smtpserver.c:
@@ -8,7 +16,7 @@
 	    Feed a NUL-byte on ARGV-overwrite simulation of  setproctitle()
 	    in systems that have to do that..
 
-	* smtpserver/subdaemon-rtr.c:
+	* smtpserver/subdaemon-rtr.c, smtpserver/subdaemon-ctf.c:
 	    Pass  -Z zconf  -option for the called execl()s.
 
 	* smtpserver/subdaemons.c:
